Fix some music player spacing

--- a/app/frontend/stylesheets/public/2_components/amplitude-controls.sass
+++ b/app/frontend/stylesheets/public/2_components/amplitude-controls.sass
@@ -183,7 +183,7 @@
 
   .amplitude-info-name
     @include tablet-or-larger
-      padding-right: 56px
+      padding-right: 80px
 
   .amplitude-volume
     margin-left: 18px
