--- a/app/frontend/stylesheets/public/2_components/amplitude-playlist.sass
+++ b/app/frontend/stylesheets/public/2_components/amplitude-playlist.sass
@@ -244,14 +244,14 @@
   border: 1px solid transparent
   width: 100%
   margin-top: 0
-  margin-bottom: 22px
-  padding: 5px
+  margin-bottom: 12px
+  padding: 10px
   padding-left: 37px
   padding-right: 50px
   cursor: pointer
 
   @include tablet-or-larger
-    margin-bottom: 28px
+    margin-bottom: 18px
 
 .amplitude-active-song-container
   border-color: $background-blue
@@ -259,7 +259,7 @@
 .amplitude-song
   &-icon
     position: absolute
-    top: 12px
+    top: 17px
     left: 12px
     font-size: 1.2rem
 
